--- a/package.json
+++ b/package.json
@@ -9,29 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
-    "bootstrap": "^5.3.3",
-    "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.1",
-    "next": "15.2.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "stream-browserify": "^3.0.0"
+    "@heroicons/react": "^1.0.6",
+    "bootstrap": "^5.2.3",
+    "next": "12.3.4",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@tailwindcss/postcss": "^4",
+    "@eslint/eslintrc": "^2.1.4",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@tailwindcss/postcss": "^3.0.0",
     "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.3",
-    "ethers": "^6.13.5",
-    "hardhat": "^2.22.19",
+    "crypto-browserify": "^3.12.0",
+    "eslint": "^8.40.0",
+    "eslint-config-next": "12.3.4",
+    "ethers": "^5.7.2",
+    "hardhat": "^2.14.0",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.3.2",
     "util": "^0.12.5",
-    "webpack": "^5.98.0"
+    "webpack": "^5.85.0"
   }
 }
